data/usersCode/dfgdfbcvb/question1/error.txt
/home/gauravghati/clash/data/usersCode/dfgdfbcvb/question1/code1-0.cpp:1:1: error: ‘sdfl’ does not name a type
 sdfl sjfdsdf osdifsdfio sdfsdfsdf
 ^~~~
